// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DropZone > should render correctly 1`] = `
<div>
  <div
    aria-label="File Dropzone"
    class="HvDropZone-dropZoneLabelsGroup css-713atf-StyledDropZoneLabelsGroup e1r4xwg210"
    id="dropzone-test"
  >
    <label
      class="HvTypography-root HvTypography-label HvDropZone-dropZoneLabel e1r4xwg29 HvLabel-root css-1dc87yj-StyledTypography-StyledLabel e17iqvr40 hv-1j8ohlw"
      for="dropzone-test-input-file"
      id="dropzone-test-input-file-label"
    >
      Label
    </label>
    <label
      class="HvTypography-root HvTypography-body e1r4xwg28 HvInfoMessage-root HvInfoMessage-gutter css-bba0j8-StyledTypography-StyledInfoMessage e5krntv0 hv-1gxwolr"
      id="dropzone-test-description"
    >
      Max. file size: 1.00B
      Accepted files:
    </label>
  </div>
  <div
    class="HvDropZone-dropZoneContainer css-1w8y3mk-StyledDropZoneContainer e1r4xwg27"
    id="dropzone-test-button"
    role="button"
    tabindex="0"
  >
    <input
      accept=""
      class="HvDropZone-inputArea css-yg1b7p-StyledInput e1r4xwg26"
      id="dropzone-test-input-file"
      multiple=""
      tabindex="-1"
      title="Drag and drop or Select files"
      type="file"
    />
    <div
      class="HvDropZone-dropArea css-tnj4j3-StyledDropArea e1r4xwg25"
    >
      <div
        class="HvDropZone-dropZoneAreaIcon e1r4xwg22 css-ubf50j-StyledDropAreaIcon"
        name="Doc"
      >
        <svg
          focusable="false"
          height="32"
          viewBox="0 0 16 16"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="color0"
            d="M9 0H2v16h12V5zm3.6 5H9V1.4zm.4 10H3V1h5v5h5z"
            fill="var(--uikit-colors-secondary)"
          />
        </svg>
      </div>
      <div
        class="HvDropZone-dropZoneAreaLabels css-1kosfbb-StyledDropAreaLabels e1r4xwg21"
      >
        <p
          class="HvTypography-root HvTypography-body HvDropZone-dragText css-1biekxg-StyledDragText e1r4xwg23 hv-1gxwolr"
        >
          Drag and drop or
          <span
            class="HvDropZone-selectFilesText css-1wb4dkx-StyledSelectedFilesText e1r4xwg20"
          >
             Select files
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropZone > should render correctly when disabled 1`] = `
<div>
  <div
    aria-label="File Dropzone"
    class="HvDropZone-dropZoneLabelsGroup css-713atf-StyledDropZoneLabelsGroup e1r4xwg210"
    id="dropzone-test"
  >
    <label
      class="HvTypography-root HvTypography-label HvDropZone-dropZoneLabel e1r4xwg29 HvLabel-root css-qbixc0-StyledTypography-StyledLabel e17iqvr40 hv-1j8ohlw"
      for="dropzone-test-input-file"
      id="dropzone-test-input-file-label"
    >
      Label
    </label>
    <label
      class="HvTypography-root HvTypography-body e1r4xwg28 HvInfoMessage-root HvInfoMessage-gutter css-195x8ec-StyledTypography-StyledInfoMessage e5krntv0 hv-1gxwolr"
      id="dropzone-test-description"
    >
      Max. file size: 1.00B
      Accepted files:
    </label>
  </div>
  <div
    class="HvDropZone-dropZoneContainer HvDropZone-dropZoneContainerDisabled css-1hl2zy2-StyledDropZoneContainer e1r4xwg27"
    id="dropzone-test-button"
    role="button"
    tabindex="0"
  >
    <input
      accept=""
      class="HvDropZone-inputArea css-yg1b7p-StyledInput e1r4xwg26"
      disabled=""
      id="dropzone-test-input-file"
      multiple=""
      tabindex="-1"
      title=""
      type="file"
    />
    <div
      class="HvDropZone-dropArea css-tnj4j3-StyledDropArea e1r4xwg25"
    >
      <div
        class="HvDropZone-dropZoneAreaIcon e1r4xwg22 css-ubf50j-StyledDropAreaIcon"
        name="Doc"
      >
        <svg
          focusable="false"
          height="32"
          viewBox="0 0 16 16"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="color0"
            d="M9 0H2v16h12V5zm3.6 5H9V1.4zm.4 10H3V1h5v5h5z"
            fill="var(--uikit-colors-secondary_60)"
          />
        </svg>
      </div>
      <div
        class="HvDropZone-dropZoneAreaLabels css-1kosfbb-StyledDropAreaLabels e1r4xwg21"
      >
        <p
          class="HvTypography-root HvTypography-body HvDropZone-dragText css-1biekxg-StyledDragText e1r4xwg23 hv-1gxwolr"
        >
          Drag and drop or
          <span
            class="HvDropZone-selectFilesText css-1wb4dkx-StyledSelectedFilesText e1r4xwg20"
          >
             Select files
          </span>
        </p>
      </div>
    </div>
  </div>
</div>
`;
